# data-analytics

./: .gitignore  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cap_01_built-in/: README.md
cap_01_built-in/data-structures/: 3-set.py  4-dictionary.py
cap_01_built-in/files/: 1-file-handling.py  2-json.py
cap_01_built-in/functions/: 1-functions.py
cap_01_built-in/io/: 1-input-output.py
cap_01_built-in/stdlib/: 1-regex.py
cap_02_numpy/: 1-ndarray-basics.py  2-indexing-slicing.py  3-pseudorandom-number-generation.py  4-array-oriented.py  4-universal-functions.py  5-array-oriented.py  5-linear-algebra.py  6-file-io.py  6-random-and-walks.py  8-random-walks.py  README.md
cap_03_built-in/: README.md
cap_03_built-in/control-flow/: 1-if-else-for-loop.py
cap_03_built-in/data-structures/: 1-tupple.py  2-list.py  3-set.py  4-dictionary.py  5-string.py
cap_03_built-in/files/: 1-file-handling.py  2-json.py
cap_03_built-in/functions/: 1-functions.py  2-iterators-generators.py
cap_03_built-in/io/: 1-input-output.py
cap_03_built-in/stdlib/: 1-regex.py  2-random.py
cap_03_panda/: 1-series.py  2-dataframe.py  3-index-objects.py  4-essential-functionality.py  5-function-sorting-ranking.py  6-descriptive-statistics.py  README.md
cap_04_numpy/: 1-ndarray-basics.py  2-indexing-slicing.py  3-pseudorandom-number-generation.py  4-universal-functions.py  5-array-oriented.py  6-file-io.py  7-linear-algebra.py  8-random-walks.py  README.md  exercises.py
cap_05_pandas/: 1-series.py  2-dataframe.py  3-index-objects.py  4-essential-functionality.py  5-function-sorting-ranking.py  6-descriptive-statistics.py  README.md  exercises.py
cap_06_io/: 1-reading-writing-text.py  2-json-xml-html.py  3-binary-formats.py  4-web-apis.py  5-databases.py  README.md  exercises.py
cap_07_cleaning/: 1-handling-missing-data.py  2-data-transformation.py  3-discretization-outliers-sampling-dummies.py  4-extension-data-types.py  5-string-manipulation.py  6-categorical-data.py  README.md  exercises.py
cap_08_wrangling/: 1-hierarchical-indexing.py  2-merge-and-join.py  3-concatenate-and-combine.py  4-reshaping-pivoting.py  README.md  exercises.py
cap_09_plotting/: 1-matplotlib-primer.py  2-pandas-seaborn.py  README.md  exercises.py
cap_10_groupby/: 1-groupby-mechanics.py  2-data-aggregation.py  3-apply-split-apply-combine.py  4-group-transforms.py  5-pivot-tables-crosstab.py  README.md  exercises.py
cap_11_timeseries/: 1-date-time-types.py  2-time-series-basics.py  3-date-ranges-frequencies-shifting.py  4-time-zone-handling.py  5-periods.py  6-resampling.py  7-moving-window-functions.py  README.md  exercises.py
cap_12_modeling/: 1-pandas-model-interface.py  2-patsy-formulas.py  3-statsmodels.py  4-scikit-learn.py  README.md  exercises.py
cap_13_examples/: 1-bitly-usagov.py  2-movielens.py  3-baby-names.py  4-usda-food.py  5-fec-campaign.py  README.md
cap_a_advanced-numpy/: 1-ndarray-internals.py  2-advanced-array-manipulation.py  3-broadcasting.py  4-advanced-ufuncs.py  5-structured-arrays.py  6-sorting.py  README.md  exercises.py
challenges/: README.md  _template.py
database/: __init__.py  connection.py
