[tool.poetry]
name = "data-analytics-book"
version = "0.1.0"
description = "Entorno para libro de Data Analysis"
authors = ["Sparrow <javier1009rm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Aquí puedes dejarlo vacío por ahora, luego añadirás cosas con 'poetry add'
numpy = "^2.4.6"
pandas = "^3.0.3"
matplotlib = "^3.10.9"
ipython = "^9.14.1"
jupyter = "^1.1.1"
scipy = "^1.17.1"
scikit-learn = "^1.9.0"
statsmodels = "^0.14.6"
psycopg2-binary = "^2.9.12"

[tool.pyright]
# Strict type checking travels with the repo so the editor (Pylance) and any CI
# enforce the same rules. Every file under cap_01_built-in is kept at 0 errors.
include = ["cap_01_built-in"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
