# PEP 621 project metadata (the modern standard Poetry 2.x recommends over the
# deprecated [tool.poetry] metadata keys).
[project]
name = "data-analytics-book"
version = "0.1.0"
description = "Study workspace for the book 'Python for Data Analysis' (Wes McKinney)"
authors = [{ name = "Sparrow", email = "javier1009rm@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy>=2.4.6,<3",
    "pandas>=3.0.3,<4",
    "matplotlib>=3.10.9,<4",
    "ipython>=9.14.1,<10",
    "jupyter>=1.1.1,<2",
    "scipy>=1.17.1,<2",
    "scikit-learn>=1.9.0,<2",
    "statsmodels>=0.14.6,<1",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "tables (>=3.11.1,<4.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "patsy (>=1.0.2,<2.0.0)",
]

[tool.poetry]
# Study workspace, not an installable package — Poetry manages dependencies only.
package-mode = false

# Development-only tools (installed with `poetry install`, excluded from runtime).
[tool.poetry.group.dev.dependencies]
pyright = ">=1.1.410"

[tool.pyright]
# Strict type checking travels with the repo so the editor (Pylance) and any CI
# enforce the same rules. Every chapter folder is kept at 0 errors. venvPath/venv
# point pyright at the in-project Poetry virtualenv so third-party types resolve.
# Each chapter folder is added here as it is created.
include = ["cap_03_built-in", "cap_04_numpy", "cap_05_pandas", "cap_06_io", "cap_07_cleaning", "cap_08_wrangling", "cap_09_plotting", "cap_10_groupby", "cap_11_timeseries", "cap_12_modeling", "cap_13_examples", "cap_a_advanced-numpy"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.11"

# pandas/seaborn/etc. ship incomplete type stubs, so strict mode floods data-stack
# code with "unknown type" noise that would force unreadable casts into the teaching
# examples. Silence those stub-driven rules repo-wide (real type errors — bad
# arguments, wrong attributes — are still reported)...
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"

# ...then RE-ENABLE full strictness for the two chapters whose dependencies are fully
# typed (built-ins and NumPy), so they stay a 0-unknown showcase.
[[tool.pyright.executionEnvironments]]
root = "cap_03_built-in"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"

[[tool.pyright.executionEnvironments]]
root = "cap_04_numpy"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"

[[tool.pyright.executionEnvironments]]
root = "cap_a_advanced-numpy"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"
